@@ -1,8 +1,10 @@
 Version 0.11.2 (legolas558,pvhl)
+* configurable and custom hotkeys
 * preliminary support for section anchors in querystring page requests
 * fixed import issue related to 'var' declarations inside content pages (found by deroock)
 * converted source code from array notation to dot notation (pvhl)
 * fixed help pages browsing issue with IE (deroock)
+* some optimizations/bugfixes (pvhl)
 
 Version 0.11.1 (legolas558) released 2010-03-26
 * added 'wsif.generator' header to generated WSIF files
